fix too much empty space

--- a/src/client/app/component/BusinessCard/style.scss
+++ b/src/client/app/component/BusinessCard/style.scss
@@ -27,6 +27,14 @@ $margin: calc(9% / 6);
   background-size: cover;
 }
 
+.image-container:hover{
+  .business-name {
+    display: block;
+    color: $yellow;
+    font-size: 1.375em;
+  }
+}
+
 .business-score {
   color: $red;
   display: block;
@@ -38,11 +46,8 @@ $margin: calc(9% / 6);
 
 }
 
-.business-name {
-  display: block;
-  color: $yellow;
-  font-size: 1.375em;
-  height: 1.6875em;
+.business-name{
+  display: none;
 }
 
 .business-title {
@@ -77,7 +82,7 @@ $margin: calc(9% / 6);
   color: #adafb2;
   font-size: 12px;
   height: .875em;
-  padding-left: 0.1em;
+  padding-left: 0.3em;
 }
 
 .business-more {
@@ -86,9 +91,5 @@ $margin: calc(9% / 6);
   height: .875em;
   text-decoration: none;
   text-transform: uppercase;
-  padding-right: 0.1em;
-}
-
-.hideBusinessName {
-  display: none;
+  padding-right: 0.3em;
 }
