--- a/src/client/app/component/HomePage/style.scss
+++ b/src/client/app/component/HomePage/style.scss
@@ -1,5 +1,5 @@
 $map-width: 35%;
-$container-width: 65%;
+$container-width: 55%;
 
 body {
   margin: 0;
@@ -17,7 +17,7 @@ body {
 
   .google-map-component {
     height: 100vh;
-    width: 35%;
+    width: 45%;
   }
 }
 
